--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit">
-    <title><%=title%></title>
+  <link rel="icon" type="image/png" href="/images/exchange.png" />
+  <title><%=title%></title>
     <link href="/styles/dashboard/loader.css" rel="stylesheet" type="text/css" />
     <link href="/plugins/animate/animate.css" rel="stylesheet">
     <script src="/js/loader.js"></script>
