--- a/resources/views/partials/dashfooter.edge
+++ b/resources/views/partials/dashfooter.edge
@@ -30,11 +30,13 @@
 <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
 <script src="/plugins/apex/apexcharts.min.js"></script>
 <script src="/js/dashboard/dash_1.js"></script>
-<script type="text/javascript" src="/dependencies/sails.io.js"
-reconnect="true"
-></script>
-<script src="/ts/ts.js"></script>
+<script src="/plugins/select2/select2.min.js"></script>
+<script src="/plugins/select2/custom-select2.js"></script>
 <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
+<script>$(".disabled-results").select2();</script>
+<script src="/plugins/bootstrap-select/bootstrap-select.min.js"></script>
+<script src="/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.js"></script>
+<script src="/plugins/bootstrap-touchspin/custom-bootstrap-touchspin.js"></script>
 
 </body>
 </html>
