--- a/resources/views/dashboard/walletdash.edge
+++ b/resources/views/dashboard/walletdash.edge
@@ -1,4 +1,5 @@
-<%- partial('../partials/dashheader.ejs') %>
+@include('partials/dashheader')
+
 <!--  BEGIN CONTENT AREA  -->
 <div id="content" class="main-content">
     <div class="layout-px-spacing">
@@ -15,7 +16,7 @@
                     </li>
                 </ul>
                 <div class="tab-content" id="animateLineContent-4">
-                    <div class="tab-pane fade show active w-100" id="animated-underline-home" role="tabpanel" aria-labelledby="animated-underline-home-tab">
+                    <div class="tab-pane fade show active" id="animated-underline-home" role="tabpanel" aria-labelledby="animated-underline-home-tab">
                         <blockquote class="blockquote">
                            <i class="fal fa-info"></i>
                             Depositing to the below address requires confirmations of the entire network. It will arrive after 2 confirmations.
@@ -26,10 +27,10 @@
                         </blockquote>
                         <div class="card component-card_1 w-100">
                             <div class="card-body">
-                                <h5 class="card-title text-center">Deposit Litecoin</h5>
-                                <img src="<%=url%>" class="rounded mx-auto d-block">
+                                <h5 class="card-title text-center">Deposit Dash</h5>
+                                <img src="{{qr}}" class="rounded mx-auto d-block">
                                 <div class="input-group mb-4">
-                                    <input type="text" class="form-control" id="address" value="<%=address%>" readonly>
+                                    <input type="text" class="form-control" id="address" value="{{wallet}}" readonly>
                                     <div class="input-group-append">
                                         <button class="btn btn-primary" type="button" data-clipboard-action="copy" data-clipboard-target="#address"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-copy"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg></button>
                                     </div>
@@ -37,7 +38,7 @@
                                 <div class="alert alert-warning mb-4" role="alert">
                                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
                                     <i class="fal fa-exclamation-triangle"></i>
-                                    <strong>warning!</strong> Sending any other coin expect <b>Litecoin</b> will result to loss of your funds.</button>
+                                    <strong>warning!</strong> Sending any other coin expect <b>Dash</b> will result to loss of your funds.</button>
                                 </div>
                             </div>
                         </div>
@@ -56,9 +57,10 @@
 </div>
 
 
+
 <script src="/js/clipboard/clipboard.min.js"></script>
     <script>
       new Clipboard('.btn');
     </script>
-    <%- partial('../partials/dashfooter.ejs') %>
+  @include('partials/dashfooter')
 </div>
