--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit">
   <link rel="icon" type="image/png" href="/images/exchange.png" />
-  <title><%=title%></title>
+  <title>{{title}}</title>
     <link href="/styles/dashboard/loader.css" rel="stylesheet" type="text/css" />
     <link href="/plugins/animate/animate.css" rel="stylesheet">
     <script src="/js/loader.js"></script>
@@ -24,7 +24,10 @@
     <link rel="stylesheet" href="/icons/css/all.css">
     <link rel="stylesheet" href="/styles/components/cards/card.css">
     <link rel="stylesheet" href="/styles/elements/alert.css">
-    <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
+  <link rel="stylesheet" href="/plugins/bootstrap-select/bootstrap-select.min.css">
+  <link rel="stylesheet" type="text/css" href="/plugins/select2/select2.min.css">
+  <link rel="stylesheet" type="text/css" href="/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css">
+  <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 
 </head>
 <body>
@@ -43,7 +46,7 @@
             <li class="nav-item align-self-center page-heading">
                 <div class="page-header">
                     <div class="page-title">
-                        <h3><%=params.split('/')[1]%></h3>
+                        <h3>{{param.split('/')[1]}}</h3>
                     </div>
                 </div>
             </li>
@@ -140,21 +143,21 @@
                 </a>
                 <div class="dropdown-menu position-absolute" aria-labelledby="notificationDropdown">
                     <div class="notification-scroll">
-                      <%if (notifications!==undefined){%>
-
+                     @if(notifications.length!==0)
                         <div class="dropdown-item">
                             <div class="media">
                              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
                               <div class="media-body">
-                                    <div class="notification-para"><span class="user-name initialism"><%=notifications.type%>: </span><%=notifications.msg%></div>
+                                    <div class="notification-para"><span class="user-name initialism">{{notifications.type}}: </span>{{notifications.msg}}</div>
                                 </div>
                             </div>
                         </div>
-                      <%}else {%>
+                      @else
                       <div class="dropdown-item">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-frown"><circle cx="12" cy="12" r="10"></circle><path d="M16 16s-1.5-2-4-2-4 2-4 2"></path><line x1="9" y1="9" x2="9.01" y2="9"></line><line x1="15" y1="9" x2="15.01" y2="9"></line></svg>
+                        no new notifications
                       </div>
-                      <%}%>
+                      @endif
 
                     </div>
                 </div>
@@ -204,7 +207,7 @@
                     </a>
                 </li>
                 <li class="nav-item theme-text">
-                    <a href="index.html" class="nav-link"><%=title%></a>
+                    <a href="index.html" class="nav-link">{{title}}</a>
                 </li>
                 <li class="nav-item toggle-sidebar">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left sidebarCollapse"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
@@ -242,7 +245,7 @@
                             <a href="/walletbch">Bch</a>
                         </li>
                         <li>
-                            <a href="/walleteth">Eth</a>
+                            <a href="/walletdash">Dash</a>
                         </li>
                         <li>
                             <a href="/walletltc">Ltc</a>
@@ -272,7 +275,7 @@
                 </li>
 
                 <li class="menu">
-                    <a href="/createoffer" aria-expanded="false" class="dropdown-toggle">
+                    <a href="/create_offer" aria-expanded="false" class="dropdown-toggle">
                         <div class="">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg>
                             <span>Create offer</span>
