--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="/plugins/bootstrap-select/bootstrap-select.min.css">
   <link rel="stylesheet" type="text/css" href="/plugins/select2/select2.min.css">
   <link rel="stylesheet" type="text/css" href="/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css">
+  <link rel="stylesheet" type="text/css" href="/styles/forms/theme-checkbox-radio.css">
   <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 
 </head>
