--- a/resources/views/dashboard/create_offer.edge
+++ b/resources/views/dashboard/create_offer.edge
@@ -79,7 +79,7 @@
               <input id="3" type="text" value="5" name="demo_vertical">
               <blockquote class="blockquote mt-3">Indicates the amount of time in <b>minutes</b> you will be able make their payment. The trade will automatically be canceled if you have not clicked <b>Mark as Paid</b> button before the above payment window expires.</blockquote>
             </div>
-            div class="col-lg">
+            <div class="col-lg">
             <label>Country</label>
             <select class="form-control disabled-results">
               @each(country in countries)
