--- a/resources/views/partials/dashfooter.edge
+++ b/resources/views/partials/dashfooter.edge
@@ -40,10 +40,31 @@
   createTag: function(params) {
     return undefined;
   }
-});</script>
+});
+</script>
 <script src="/plugins/bootstrap-select/bootstrap-select.min.js"></script>
 <script src="/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.js"></script>
 <script src="/plugins/bootstrap-touchspin/custom-bootstrap-touchspin.js"></script>
-
+<script src="/plugins/notification/snackbar/snackbar.min.js"></script>
+<script>
+  $("input[name='margin']").TouchSpin({
+    postfix: '%'
+  });
+  $("input[name='min_amount']").TouchSpin({
+    verticalbuttons: true,
+    buttondown_class: "btn btn-classic btn-outline-info",
+    buttonup_class: "btn btn-classic btn-outline-danger"
+  });
+  $("input[name='max_amount']").TouchSpin({
+    verticalbuttons: true,
+    buttondown_class: "btn btn-classic btn-outline-info",
+    buttonup_class: "btn btn-classic btn-outline-danger"
+  });
+  $("input[name='timeframe']").TouchSpin({
+    verticalbuttons: true,
+    buttondown_class: "btn btn-classic btn-outline-info",
+    buttonup_class: "btn btn-classic btn-outline-danger"
+  });
+</script>
 </body>
 </html>
