--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -28,6 +28,8 @@
   <link rel="stylesheet" type="text/css" href="/plugins/select2/select2.min.css">
   <link rel="stylesheet" type="text/css" href="/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css">
   <link rel="stylesheet" type="text/css" href="/styles/forms/theme-checkbox-radio.css">
+  <link rel="stylesheet" type="text/css" href="/styles/forms/switches.css">
+  <link href="/plugins/notification/snackbar/snackbar.min.css" rel="stylesheet" type="text/css" />
   <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 
 </head>
