--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -24,11 +24,11 @@
     <link rel="stylesheet" href="/icons/css/all.css">
     <link rel="stylesheet" href="/styles/components/cards/card.css">
     <link rel="stylesheet" href="/styles/elements/alert.css">
-  <link rel="stylesheet" href="/plugins/bootstrap-select/bootstrap-select.min.css">
   <link rel="stylesheet" type="text/css" href="/plugins/select2/select2.min.css">
   <link rel="stylesheet" type="text/css" href="/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css">
   <link rel="stylesheet" type="text/css" href="/styles/forms/theme-checkbox-radio.css">
   <link rel="stylesheet" type="text/css" href="/styles/forms/switches.css">
+  <link rel="stylesheet" href="/styles/override.css">
   <link href="/plugins/notification/snackbar/snackbar.min.css" rel="stylesheet" type="text/css" />
   <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 
@@ -280,6 +280,29 @@
                       </li>
                     </ul>
                 </li>
+              <li class="menu">
+                <a href="#portfolio" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                  <div class="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trello"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><rect x="7" y="7" width="3" height="9"/><rect x="14" y="7" width="3" height="5"/></svg>
+                    <span>Portfolio</span>
+                  </div>
+                  <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
+                  </div>
+                </a>
+                <ul class="collapse submenu list-unstyled" id="portfolio" data-parent="#accordionExample">
+                  <li>
+                    <a href="/trades">Trades</a>
+                  </li>
+                  <li>
+                    <a href="/offers">offers</a>
+                  </li>
+
+                  <li>
+                    <a href="/contacts">Contacts </a>
+                  </li>
+                </ul>
+              </li>
 
                 <li class="menu">
                     <a href="widgets.html" aria-expanded="false" class="dropdown-toggle">
