--- a/resources/views/partials/dashfooter.edge
+++ b/resources/views/partials/dashfooter.edge
@@ -50,20 +50,28 @@
 <script src="/plugins/table/datatable/custom_miscellaneous.js"></script>
 <script>
   $("input[name='margin']").TouchSpin({
-    postfix: '%'
+    postfix: '%',
+    min:-100,
+    max: 100,
   });
   $("input[name='min_amount']").TouchSpin({
     verticalbuttons: true,
+    min:1,
+    max:10000000000,
     buttondown_class: "btn btn-classic btn-outline-info",
     buttonup_class: "btn btn-classic btn-outline-danger"
   });
   $("input[name='max_amount']").TouchSpin({
     verticalbuttons: true,
+    min:1,
+    max:10000000000000000,
     buttondown_class: "btn btn-classic btn-outline-info",
     buttonup_class: "btn btn-classic btn-outline-danger"
   });
   $("input[name='timeframe']").TouchSpin({
     verticalbuttons: true,
+    min:30,
+    max:120,
     buttondown_class: "btn btn-classic btn-outline-info",
     buttonup_class: "btn btn-classic btn-outline-danger"
   });
