minor offer fixes

--- a/resources/views/dashboard/create_offer.edge
+++ b/resources/views/dashboard/create_offer.edge
@@ -62,7 +62,7 @@
             </div>
   <div class="col-lg mt-2 mb-3">
     <label>Margin</label>
-    <input id="demo1" type="text" value="5" name="margin" maxlength="1000" oninput="price($('#coin').val(),'{{ csrfToken }}',$('#currency').val())" required>
+    <input id="margin" type="text" value="5" name="margin" maxlength="1000" required>
     <div class="d-flex justify-content-center mx-5 mt-3 mb-5 ">
     <div class="spinner-border spinner-border-reverse align-self-center text-dark d-none" id="c_spin"></div>
     </div>
