--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -269,7 +269,7 @@
                     </a>
                     <ul class="collapse submenu list-unstyled" id="elements" data-parent="#accordionExample">
                         <li>
-                            <a href="element_alerts.html"> Buy Coin</a>
+                            <a href="/buy_coin"> Buy Coin</a>
                         </li>
                         <li>
                             <a href="element_avatar.html">Sell Coin </a>
