--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -30,6 +30,8 @@
   <link rel="stylesheet" type="text/css" href="/styles/forms/switches.css">
   <link rel="stylesheet" href="/styles/override.css">
   <link href="/plugins/notification/snackbar/snackbar.min.css" rel="stylesheet" type="text/css" />
+  <link href="/plugins/animate/animate.css" rel="stylesheet" type="text/css" />
+  <link href="/styles/components/custom-modal.css" rel="stylesheet" type="text/css" />
   <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 
 </head>
