offer page fixed

--- a/resources/views/dashboard/index.edge
+++ b/resources/views/dashboard/index.edge
@@ -186,7 +186,7 @@
                                 </div>
                             </div>
                         </div>
-                      @else@if(transactions.type==='receive')
+                      @elseif(transactions.type==='receive')
                         <div class="transactions-list">
                             <div class="t-item">
                                 <div class="t-company-name">
