--- a/resources/views/dashboard/buy.edge
+++ b/resources/views/dashboard/buy.edge
@@ -13,50 +13,64 @@
           <div class="card-header">
             <h5 class="mt-3 ml-4">HOW MUCH DO YOU WANT TO BUY?</h5>
             <form>
+              {{ csrfField() }}
+              <input class="d-none" value="{{uc}}" id="rate" type="number">
+              <input class="d-none" value="{{uc_min}}" id="min" type="number">
+              <input class="d-none" value="{{uc_max}}" id="max" type="number">
               <div class="row">
                 <div class="col">
                   <label class="label ml-3" for="coin">Enter amount:</label>
                   <div class="input-group mb-5">
-                    <input type="text" class="form-control form-group-sm ml-3" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2" id="coin">
+                    <input type="text" class="form-control form-group-sm ml-3"  aria-label="Recipient's username" aria-describedby="basic-addon2" id="coin" required>
                     <div class="input-group-append">
-                      <span class="input-group-text" id="basic-addon6">$</span>
+                      <span class="input-group-text" id="basic-addon6">{{offer.coin}}</span>
                     </div>
                   </div>
                 </div>
-
                 <div class="col">
                   <label class="label" for="currency">Enter amount:</label>
                   <div class="input-group mb-5 mr-5">
-                    <input type="text" class="form-control form-control-sm" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2" id="currency">
+                    <input type="text" class="form-control form-control-sm"  aria-label="Recipient's username" aria-describedby="basic-addon2" id="currency" required>
                     <div class="input-group-append mr-3">
-                      <span class="input-group-text" id="basic-addon6">$</span>
+                      <span class="input-group-text" id="basic-addon6">{{offer.currency}}</span>
                     </div>
                   </div>
                 </div>
+                <div class="invalid-feedback text-center mt-0 mb-2">
+                  Amount must be between <b>{{min}}</b> and <b>{{max}}</b>
+                </div>
               </div>
               <div class="container">
-              <div class="alert alert-light-warning mb-2" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
-                <strong>Primary!</strong> Lorem Ipsum is simply dummy text of the printing.
-              </div>
+                @if(owner)
+                <div class="alert alert-light-danger mt-3" role="alert">
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
+                  <strong>warning!</strong> <br>This offer belongs to you.You cant trade on your offers
+                </div>
+                <button class="btn btn-secondary mb-2 mr-2 btn-block" disabled><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"/><path d="M7 11V7a5 5 0 0 1 10 0v4"/></svg> Buy Now! </button>
+                 @else
                 <button class="btn btn-secondary mb-2 mr-2 btn-block"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"/><path d="M7 11V7a5 5 0 0 1 10 0v4"/></svg> Buy Now! </button>
+                 @endif
 
                 <div class="row">
                   <div class="col-lg">
-                    <div class="alert alert-light-warning mt-3" role="alert">
+                    <div class="alert alert-light-info mt-3" role="alert">
                       <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
-                      <strong>Primary!</strong> Lorem Ipsum is simply dummy text of the printing.
+                      <strong>Offer information!</strong> <br>1.Your amount should be between <b>{{min}}</b> and <b>{{max}}</b><br>
+                      2.Rate per Bitcoin is {{rate}}. You can buy any fraction
                     </div>
                   </div>
                   <div class="col-lg">
-                    <div class="alert alert-light-primary mt-3" role="alert">
+                    <div class="alert alert-light-warning mt-3" role="alert">
                       <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
-                      <strong>Primary!</strong> Lorem Ipsum is simply dummy text of the printing.
+                      <strong>Payment Verification!</strong> <br>
+                      The buyer of this trade has a time limit of <b>{{offer.timeframe}}</b> minutes to pay for the trade before the trade is cancelled by the system. Trade will not auto-cancel when buyer has marked trade as paid, after which buyer has to wait for seller to release coin.
                     </div>
                   </div>
                 </div>
                 <hr>
                 <h5 class="text-center">Owner Terms</h5>
+                <hr>
+                <p class="text-center">{{offer.terms}}</p>
               </div>
               </div>
            </form>
@@ -69,4 +83,7 @@
 
 
   @include('partials/dashfooter')
+  <script src="/prices/trade_price.js"></script>
 </div>
+
+
