--- a/resources/views/partials/dashfooter.edge
+++ b/resources/views/partials/dashfooter.edge
@@ -76,5 +76,7 @@
     buttonup_class: "btn btn-classic btn-outline-danger"
   });
 </script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script src="/form/ws.js" rel="script"></script>
 </body>
 </html>
